--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -14,6 +14,7 @@
             <th>Last Name</th>
             <th>Salary</th>
             <th>Department</th>
+            <th>Action</th>
         </thead>
         <tbody>
             {% for employee in employees %}
@@ -22,6 +23,7 @@
                 <td>{{employee.last_name}}</td>
                 <td>$ {{employee.salary}}</td>
                 <td>{{employee.department_id}}</td>
+                <td><a href="/delete/employee/{{employee.id}}">Delete</a> | <a href="/edit/employee/{{employee.id}}">Edit</a></td>
             </tr>
             {% endfor %}
         </tbody>
